# hetmatpy

./: .gitignore  .travis.yml  404.html  CITATION.cff  LICENSE.md  README.md  environment.yml  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: release.yaml  test.yaml
LICENSE/: index.html
diffusion/: metapath_diffusion.py
hetmatpy/: degree_group.py  degree_weight.py  diffusion.py  matrix.py  pipeline.py  testing.py  xarray.py
hetmatpy/hetmat/: __init__.py  archive.py  caching.py
hetmatpy/hetmat/tests/: test_archive.py  test_caching.py  test_hetmat.py
hetmatpy/tests/: hetnets.py  test_degree_weight.py  test_diffusion.py  test_hetnetpy.py  test_path_count.py  test_pipeline.py
hetmech/: TODO.md  degree_group.py  degree_weight.py  diffusion.py  dwpc.py  hetmat.py  matrix.py  path_count.py  pipeline.py  test_degree_weight.py  test_diffusion.py  test_dwpc.py  test_hetio.py  test_matrix.py  test_path_count.py  xarray.py
hetmech/hetmat/: __init__.py  archive.py  caching.py
hetmech/hetmat/tests/: test_caching.py  test_hetmat.py
hetmech/tests/: test_degree_weight.py  test_path_count.py
hetmechpy/: degree_weight.py  diffusion.py  matrix.py  pipeline.py
hetmechpy/tests/: test_diffusion.py  test_pipeline.py
hetnet/: README.md  path_charting.py
pilot-examples/CbGiG/: CbGiG-queries.py
reference/hetmatpy/: index.html
reference/hetmatpy/degree_group/: index.html
reference/hetmatpy/degree_weight/: index.html
reference/hetmatpy/diffusion/: index.html
reference/hetmatpy/hetmat/: index.html
search/: search_index.json
test/: test_hetio.py
(+6 files in other folders)
